// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Testing getQualiResults function Should return f3 quali results with requsted number id 1`] = `
[
  {
    "qualiType": "QUALIFYING",
    "results": [
      {
        "code": "RAM",
        "gap": "-",
        "int": "-",
        "kph": "192.579",
        "lap_set_on": 2024-05-17T15:40:09.000Z,
        "laps": "11",
        "name": "S. Ramos",
        "number": 6,
        "position": "1",
        "team": "Trident",
        "time": "1:31.767",
      },
      {
        "code": "FOR",
        "gap": "0.053",
        "int": "0.053",
        "kph": "192.467",
        "lap_set_on": 2024-05-17T15:39:44.000Z,
        "laps": "11",
        "name": "L. Fornaroli",
        "number": 4,
        "position": "2",
        "team": "Trident",
        "time": "1:31.820",
      },
      {
        "code": "MEG",
        "gap": "0.252",
        "int": "0.199",
        "kph": "192.051",
        "lap_set_on": 2024-05-17T15:40:06.000Z,
        "laps": "11",
        "name": "S. Meguetounif",
        "number": 5,
        "position": "3",
        "team": "Trident",
        "time": "1:32.019",
      },
      {
        "code": "LIN",
        "gap": "0.342",
        "int": "0.090",
        "kph": "191.863",
        "lap_set_on": 2024-05-17T15:36:44.000Z,
        "laps": "11",
        "name": "A. Lindblad",
        "number": 3,
        "position": "4",
        "team": "PREMA Racing",
        "time": "1:32.109",
      },
      {
        "code": "BEG",
        "gap": "0.389",
        "int": "0.035",
        "kph": "191.766",
        "lap_set_on": 2024-05-17T15:36:23.000Z,
        "laps": "12",
        "name": "D. Beganovic",
        "number": 1,
        "position": "5",
        "team": "PREMA Racing",
        "time": "1:32.156",
      },
      {
        "code": "MIN",
        "gap": "0.411",
        "int": "0.022",
        "kph": "191.720",
        "lap_set_on": 2024-05-17T15:40:31.000Z,
        "laps": "12",
        "name": "G. Minì",
        "number": 2,
        "position": "6",
        "team": "PREMA Racing",
        "time": "1:32.178",
      },
      {
        "code": "GOE",
        "gap": "0.513",
        "int": "0.076",
        "kph": "191.017",
        "lap_set_on": 2024-05-17T15:24:42.000Z,
        "laps": "11",
        "name": "O. Goethe",
        "number": 10,
        "position": "7",
        "team": "Campos Racing",
        "time": "1:32.254",
      },
      {
        "code": "VAN",
        "gap": "0.655",
        "int": "0.188",
        "kph": "191.214",
        "lap_set_on": 2024-05-17T15:36:36.000Z,
        "laps": "12",
        "name": "L. Van Hoepen",
        "number": 24,
        "position": "8",
        "team": "ART Grand Prix",
        "time": "1:32.422",
      },
      {
        "code": "BRO",
        "gap": "0.662",
        "int": "0.007",
        "kph": "191.199",
        "lap_set_on": 2024-05-17T15:37:09.000Z,
        "laps": "12",
        "name": "L. Browning",
        "number": 14,
        "position": "9",
        "team": "Hitech Pulse-Eight",
        "time": "1:32.429",
      },
      {
        "code": "TRA",
        "gap": "0.732",
        "int": "0.070",
        "kph": "191.055",
        "lap_set_on": 2024-05-17T15:39:55.000Z,
        "laps": "13",
        "name": "T. Tramnitz",
        "number": 7,
        "position": "10",
        "team": "MP Motorsport",
        "time": "1:32.499",
      },
      {
        "code": "LEO",
        "gap": "0.746",
        "int": "0.014",
        "kph": "191.026",
        "lap_set_on": 2024-05-17T15:36:26.000Z,
        "laps": "12",
        "name": "N. León",
        "number": 20,
        "position": "11",
        "team": "Van Amersfoort Racing",
        "time": "1:32.513",
      },
      {
        "code": "SZT",
        "gap": "0.748",
        "int": "0.002",
        "kph": "191.021",
        "lap_set_on": 2024-05-17T15:40:01.000Z,
        "laps": "13",
        "name": "K. Sztuka",
        "number": 8,
        "position": "12",
        "team": "MP Motorsport",
        "time": "1:32.515",
      },
      {
        "code": "BED",
        "gap": "0.910",
        "int": "0.160",
        "kph": "190.688",
        "lap_set_on": 2024-05-17T15:36:49.000Z,
        "laps": "11",
        "name": "N. Bedrin",
        "number": 27,
        "position": "13",
        "team": "AIX Racing",
        "time": "1:32.677",
      },
      {
        "code": "TSO",
        "gap": "0.942",
        "int": "0.032",
        "kph": "190.622",
        "lap_set_on": 2024-05-17T15:40:47.000Z,
        "laps": "12",
        "name": "N. Tsolov",
        "number": 25,
        "position": "14",
        "team": "ART Grand Prix",
        "time": "1:32.709",
      },
      {
        "code": "MAN",
        "gap": "1.020",
        "int": "0.078",
        "kph": "190.462",
        "lap_set_on": 2024-05-17T15:36:25.000Z,
        "laps": "12",
        "name": "C. Mansell",
        "number": 23,
        "position": "15",
        "team": "ART Grand Prix",
        "time": "1:32.787",
      },
      {
        "code": "ZAG",
        "gap": "1.071",
        "int": "0.051",
        "kph": "190.357",
        "lap_set_on": 2024-05-17T15:40:35.000Z,
        "laps": "11",
        "name": "M. Zagazeta",
        "number": 19,
        "position": "16",
        "team": "Jenzer Motorsport",
        "time": "1:32.838",
      },
      {
        "code": "STE",
        "gap": "1.102",
        "int": "0.031",
        "kph": "190.293",
        "lap_set_on": 2024-05-17T15:36:33.000Z,
        "laps": "11",
        "name": "M. Stenshorne",
        "number": 15,
        "position": "17",
        "team": "Hitech Pulse-Eight",
        "time": "1:32.869",
      },
      {
        "code": "WUR",
        "gap": "1.184",
        "int": "0.082",
        "kph": "190.125",
        "lap_set_on": 2024-05-17T15:36:19.000Z,
        "laps": "12",
        "name": "C. Wurz",
        "number": 17,
        "position": "18",
        "team": "Jenzer Motorsport",
        "time": "1:32.951",
      },
      {
        "code": "VOI",
        "gap": "1.238",
        "int": "0.054",
        "kph": "190.015",
        "lap_set_on": 2024-05-17T15:11:27.000Z,
        "laps": "4",
        "name": "C. Voisin",
        "number": 29,
        "position": "19",
        "team": "Rodin Motorsport",
        "time": "1:33.005",
      },
      {
        "code": "FLO",
        "gap": "1.279",
        "int": "0.041",
        "kph": "189.931",
        "lap_set_on": 2024-05-17T15:40:28.000Z,
        "laps": "12",
        "name": "S. Floersch",
        "number": 21,
        "position": "20",
        "team": "Van Amersfoort Racing",
        "time": "1:33.046",
      },
      {
        "code": "LOA",
        "gap": "1.302",
        "int": "0.023",
        "kph": "189.884",
        "lap_set_on": 2024-05-17T15:40:25.000Z,
        "laps": "12",
        "name": "J. Loake",
        "number": 31,
        "position": "21",
        "team": "Rodin Motorsport",
        "time": "1:33.069",
      },
      {
        "code": "EST",
        "gap": "1.318",
        "int": "0.016",
        "kph": "189.852",
        "lap_set_on": 2024-05-17T15:41:14.000Z,
        "laps": "12",
        "name": "M. Esterson",
        "number": 18,
        "position": "22",
        "team": "Jenzer Motorsport",
        "time": "1:33.085",
      },
      {
        "code": "MON",
        "gap": "1.368",
        "int": "0.050",
        "kph": "189.750",
        "lap_set_on": 2024-05-17T15:37:00.000Z,
        "laps": "11",
        "name": "S. Montoya",
        "number": 11,
        "position": "23",
        "team": "Campos Racing",
        "time": "1:33.135",
      },
      {
        "code": "SHI",
        "gap": "1.368",
        "int": "0.000",
        "kph": "189.750",
        "lap_set_on": 2024-05-17T15:40:58.000Z,
        "laps": "12",
        "name": "C. Shields",
        "number": 16,
        "position": "24",
        "team": "Hitech Pulse-Eight",
        "time": "1:33.135",
      },
      {
        "code": "SMI",
        "gap": "1.369",
        "int": "0.001",
        "kph": "189.748",
        "lap_set_on": 2024-05-17T15:37:11.000Z,
        "laps": "11",
        "name": "T. Smith",
        "number": 22,
        "position": "25",
        "team": "Van Amersfoort Racing",
        "time": "1:33.136",
      },
      {
        "code": "WIS",
        "gap": "1.450",
        "int": "0.081",
        "kph": "189.583",
        "lap_set_on": 2024-05-17T15:41:11.000Z,
        "laps": "12",
        "name": "P. Wisnicki",
        "number": 30,
        "position": "26",
        "team": "Rodin Motorsport",
        "time": "1:33.217",
      },
      {
        "code": "BOY",
        "gap": "1.470",
        "int": "0.020",
        "kph": "189.542",
        "lap_set_on": 2024-05-17T15:12:28.000Z,
        "laps": "11",
        "name": "M. Boya",
        "number": 12,
        "position": "27",
        "team": "Campos Racing",
        "time": "1:33.237",
      },
      {
        "code": "DUF",
        "gap": "1.669",
        "int": "0.199",
        "kph": "189.139",
        "lap_set_on": 2024-05-17T15:36:40.000Z,
        "laps": "11",
        "name": "J. Dufek",
        "number": 28,
        "position": "28",
        "team": "AIX Racing",
        "time": "1:33.436",
      },
      {
        "code": "INT",
        "gap": "1.784",
        "int": "0.115",
        "kph": "188.906",
        "lap_set_on": 2024-05-17T15:11:50.000Z,
        "laps": "12",
        "name": "T. Inthraphuvasak",
        "number": 26,
        "position": "29",
        "team": "AIX Racing",
        "time": "1:33.551",
      },
    ],
  },
]
`;

exports[`Testing getQualiResults function Should return f3 quali results with requsted string name of race 1`] = `
[
  {
    "qualiType": "QUALIFYING",
    "results": [
      {
        "code": "BEG",
        "gap": "-",
        "int": "-",
        "kph": "183.059",
        "lap_set_on": 2024-02-29T16:30:09.000Z,
        "laps": "10",
        "name": "D. Beganovic",
        "number": 1,
        "position": "1",
        "team": "PREMA Racing",
        "time": "1:46.431",
      },
      {
        "code": "BRO",
        "gap": "0.167",
        "int": "0.167",
        "kph": "182.772",
        "lap_set_on": 2024-02-29T16:30:07.000Z,
        "laps": "10",
        "name": "L. Browning",
        "number": 14,
        "position": "2",
        "team": "Hitech Pulse-Eight",
        "time": "1:46.598",
      },
      {
        "code": "MIN",
        "gap": "0.170",
        "int": "0.003",
        "kph": "182.767",
        "lap_set_on": 2024-02-29T16:30:20.000Z,
        "laps": "10",
        "name": "G. Minì",
        "number": 2,
        "position": "3",
        "team": "PREMA Racing",
        "time": "1:46.601",
      },
      {
        "code": "MEG",
        "gap": "0.364",
        "int": "0.194",
        "kph": "182.435",
        "lap_set_on": 2024-02-29T16:30:28.000Z,
        "laps": "11",
        "name": "S. Meguetounif",
        "number": 5,
        "position": "4",
        "team": "Trident",
        "time": "1:46.795",
      },
      {
        "code": "RAM",
        "gap": "0.367",
        "int": "0.003",
        "kph": "182.430",
        "lap_set_on": 2024-02-29T16:30:12.000Z,
        "laps": "11",
        "name": "S. Ramos",
        "number": 6,
        "position": "5",
        "team": "Trident",
        "time": "1:46.798",
      },
      {
        "code": "FOR",
        "gap": "0.374",
        "int": "0.007",
        "kph": "182.418",
        "lap_set_on": 2024-02-29T16:30:23.000Z,
        "laps": "11",
        "name": "L. Fornaroli",
        "number": 4,
        "position": "6",
        "team": "Trident",
        "time": "1:46.805",
      },
      {
        "code": "TRA",
        "gap": "0.397",
        "int": "0.023",
        "kph": "182.379",
        "lap_set_on": 2024-02-29T16:30:18.000Z,
        "laps": "11",
        "name": "T. Tramnitz",
        "number": 7,
        "position": "7",
        "team": "MP Motorsport",
        "time": "1:46.828",
      },
      {
        "code": "MAN",
        "gap": "0.412",
        "int": "0.015",
        "kph": "182.353",
        "lap_set_on": 2024-02-29T16:30:00.000Z,
        "laps": "11",
        "name": "C. Mansell",
        "number": 23,
        "position": "8",
        "team": "ART Grand Prix",
        "time": "1:46.843",
      },
      {
        "code": "LIN",
        "gap": "0.442",
        "int": "0.030",
        "kph": "182.302",
        "lap_set_on": 2024-02-29T16:30:33.000Z,
        "laps": "10",
        "name": "A. Lindblad",
        "number": 3,
        "position": "9",
        "team": "PREMA Racing",
        "time": "1:46.873",
      },
      {
        "code": "EST",
        "gap": "0.503",
        "int": "0.061",
        "kph": "182.198",
        "lap_set_on": 2024-02-29T16:30:39.000Z,
        "laps": "11",
        "name": "M. Esterson",
        "number": 18,
        "position": "10",
        "team": "Jenzer Motorsport",
        "time": "1:46.934",
      },
      {
        "code": "TSO",
        "gap": "0.510",
        "int": "0.007",
        "kph": "182.186",
        "lap_set_on": 2024-02-29T16:30:03.000Z,
        "laps": "11",
        "name": "N. Tsolov",
        "number": 25,
        "position": "11",
        "team": "ART Grand Prix",
        "time": "1:46.941",
      },
      {
        "code": "VAN",
        "gap": "0.531",
        "int": "0.021",
        "kph": "182.150",
        "lap_set_on": 2024-02-29T16:30:05.000Z,
        "laps": "11",
        "name": "L. Van Hoepen",
        "number": 24,
        "position": "12",
        "team": "ART Grand Prix",
        "time": "1:46.962",
      },
      {
        "code": "LEO",
        "gap": "0.600",
        "int": "0.069",
        "kph": "182.033",
        "lap_set_on": 2024-02-29T16:30:29.000Z,
        "laps": "11",
        "name": "N. León",
        "number": 20,
        "position": "13",
        "team": "Van Amersfoort Racing",
        "time": "1:47.031",
      },
      {
        "code": "DUN",
        "gap": "0.702",
        "int": "0.102",
        "kph": "181.859",
        "lap_set_on": 2024-02-29T16:29:50.000Z,
        "laps": "12",
        "name": "A. Dunne",
        "number": 9,
        "position": "14",
        "team": "MP Motorsport",
        "time": "1:47.133",
      },
      {
        "code": "BOY",
        "gap": "0.739",
        "int": "0.037",
        "kph": "181.797",
        "lap_set_on": 2024-02-29T16:30:32.000Z,
        "laps": "11",
        "name": "M. Boya",
        "number": 12,
        "position": "15",
        "team": "Campos Racing",
        "time": "1:47.170",
      },
      {
        "code": "WUR",
        "gap": "0.760",
        "int": "0.021",
        "kph": "181.761",
        "lap_set_on": 2024-02-29T16:30:58.000Z,
        "laps": "10",
        "name": "C. Wurz",
        "number": 17,
        "position": "16",
        "team": "Jenzer Motorsport",
        "time": "1:47.191",
      },
      {
        "code": "GOE",
        "gap": "0.767",
        "int": "0.007",
        "kph": "181.749",
        "lap_set_on": 2024-02-29T16:30:26.000Z,
        "laps": "11",
        "name": "O. Goethe",
        "number": 10,
        "position": "17",
        "team": "Campos Racing",
        "time": "1:47.198",
      },
      {
        "code": "BED",
        "gap": "0.778",
        "int": "0.011",
        "kph": "181.731",
        "lap_set_on": 2024-02-29T16:30:50.000Z,
        "laps": "11",
        "name": "N. Bedrin",
        "number": 27,
        "position": "18",
        "team": "AIX Racing",
        "time": "1:47.209",
      },
      {
        "code": "VOI",
        "gap": "0.785",
        "int": "0.007",
        "kph": "181.719",
        "lap_set_on": 2024-02-29T16:30:37.000Z,
        "laps": "11",
        "name": "C. Voisin",
        "number": 29,
        "position": "19",
        "team": "Rodin Motorsport",
        "time": "1:47.216",
      },
      {
        "code": "ZAG",
        "gap": "0.786",
        "int": "0.001",
        "kph": "181.717",
        "lap_set_on": 2024-02-29T16:30:55.000Z,
        "laps": "10",
        "name": "M. Zagazeta",
        "number": 19,
        "position": "20",
        "team": "Jenzer Motorsport",
        "time": "1:47.217",
      },
      {
        "code": "LOA",
        "gap": "0.788",
        "int": "0.002",
        "kph": "181.714",
        "lap_set_on": 2024-02-29T16:30:14.000Z,
        "laps": "11",
        "name": "J. Loake",
        "number": 31,
        "position": "21",
        "team": "Rodin Motorsport",
        "time": "1:47.219",
      },
      {
        "code": "STE",
        "gap": "1.040",
        "int": "0.252",
        "kph": "181.287",
        "lap_set_on": 2024-02-29T16:29:58.000Z,
        "laps": "11",
        "name": "M. Stenshorne",
        "number": 15,
        "position": "22",
        "team": "Hitech Pulse-Eight",
        "time": "1:47.471",
      },
      {
        "code": "INT",
        "gap": "1.304",
        "int": "0.264",
        "kph": "180.843",
        "lap_set_on": 2024-02-29T16:30:53.000Z,
        "laps": "11",
        "name": "T. Inthraphuvasak",
        "number": 26,
        "position": "23",
        "team": "AIX Racing",
        "time": "1:47.735",
      },
      {
        "code": "SZT",
        "gap": "1.314",
        "int": "0.010",
        "kph": "180.826",
        "lap_set_on": 2024-02-29T16:30:49.000Z,
        "laps": "11",
        "name": "K. Sztuka",
        "number": 8,
        "position": "24",
        "team": "MP Motorsport",
        "time": "1:47.745",
      },
      {
        "code": "FLO",
        "gap": "1.381",
        "int": "0.067",
        "kph": "180.714",
        "lap_set_on": 2024-02-29T16:30:35.000Z,
        "laps": "11",
        "name": "S. Floersch",
        "number": 21,
        "position": "25",
        "team": "Van Amersfoort Racing",
        "time": "1:47.812",
      },
      {
        "code": "DUF",
        "gap": "1.447",
        "int": "0.066",
        "kph": "180.604",
        "lap_set_on": 2024-02-29T16:31:03.000Z,
        "laps": "7",
        "name": "J. Dufek",
        "number": 28,
        "position": "26",
        "team": "AIX Racing",
        "time": "1:47.878",
      },
      {
        "code": "SMI",
        "gap": "1.498",
        "int": "0.051",
        "kph": "180.518",
        "lap_set_on": 2024-02-29T16:31:00.000Z,
        "laps": "11",
        "name": "T. Smith",
        "number": 22,
        "position": "27",
        "team": "Van Amersfoort Racing",
        "time": "1:47.929",
      },
      {
        "code": "WIS",
        "gap": "1.540",
        "int": "0.042",
        "kph": "180.448",
        "lap_set_on": 2024-02-29T16:30:46.000Z,
        "laps": "11",
        "name": "P. Wisnicki",
        "number": 30,
        "position": "28",
        "team": "Rodin Motorsport",
        "time": "1:47.971",
      },
      {
        "code": "MON",
        "gap": "1.927",
        "int": "0.387",
        "kph": "179.803",
        "lap_set_on": 2024-02-29T16:18:41.000Z,
        "laps": "11",
        "name": "S. Montoya",
        "number": 11,
        "position": "29",
        "team": "Campos Racing",
        "time": "1:48.358",
      },
      {
        "code": "SHI",
        "gap": "2.134",
        "int": "0.207",
        "kph": "179.461",
        "lap_set_on": 2024-02-29T16:29:55.000Z,
        "laps": "11",
        "name": "C. Shields",
        "number": 16,
        "position": "30",
        "team": "Hitech Pulse-Eight",
        "time": "1:48.565",
      },
    ],
  },
]
`;

exports[`Testing getQualiResults function Should return quali results with requsted number id 1`] = `
[
  {
    "qualiType": "QUALIFYING GROUP A",
    "results": [
      {
        "code": "VER",
        "gap": "-",
        "int": "-",
        "kph": "147.794",
        "lap_set_on": 2024-05-23T15:23:01.000Z,
        "laps": "11",
        "name": "R. Verschoor",
        "number": 22,
        "position": "1",
        "team": "Trident",
        "time": "1:21.283",
      },
      {
        "code": "HAD",
        "gap": "0.157",
        "int": "0.157",
        "kph": "147.509",
        "lap_set_on": 2024-05-23T15:23:18.000Z,
        "laps": "11",
        "name": "I. Hadjar",
        "number": 20,
        "position": "2",
        "team": "Campos Racing",
        "time": "1:21.440",
      },
      {
        "code": "COL",
        "gap": "0.372",
        "int": "0.215",
        "kph": "147.121",
        "lap_set_on": 2024-05-23T15:26:43.000Z,
        "laps": "11",
        "name": "F. Colapinto",
        "number": 12,
        "position": "3",
        "team": "MP Motorsport",
        "time": "1:21.655",
      },
      {
        "code": "ANT",
        "gap": "0.386",
        "int": "0.014",
        "kph": "147.096",
        "lap_set_on": 2024-05-23T15:27:02.000Z,
        "laps": "11",
        "name": "A. Antonelli",
        "number": 4,
        "position": "4",
        "team": "PREMA Racing",
        "time": "1:21.669",
      },
      {
        "code": "BOR",
        "gap": "0.387",
        "int": "0.001",
        "kph": "147.094",
        "lap_set_on": 2024-05-23T15:22:57.000Z,
        "laps": "10",
        "name": "G. Bortoleto",
        "number": 10,
        "position": "5",
        "team": "Invicta Racing",
        "time": "1:21.670",
      },
      {
        "code": "FIT",
        "gap": "0.440",
        "int": "0.053",
        "kph": "146.999",
        "lap_set_on": 2024-05-23T15:26:33.000Z,
        "laps": "11",
        "name": "E. Fittipaldi",
        "number": 14,
        "position": "6",
        "team": "Van Amersfoort Racing",
        "time": "1:21.723",
      },
      {
        "code": "JCO",
        "gap": "0.488",
        "int": "0.048",
        "kph": "146.912",
        "lap_set_on": 2024-05-23T15:27:06.000Z,
        "laps": "11",
        "name": "J. Correa",
        "number": 8,
        "position": "7",
        "team": "DAMS Lucas Oil",
        "time": "1:21.771",
      },
      {
        "code": "OSU",
        "gap": "0.702",
        "int": "0.214",
        "kph": "146.529",
        "lap_set_on": 2024-05-23T15:26:14.000Z,
        "laps": "11",
        "name": "Z. O'Sullivan",
        "number": 2,
        "position": "8",
        "team": "ART Grand Prix",
        "time": "1:21.985",
      },
      {
        "code": "ACO",
        "gap": "0.936",
        "int": "0.234",
        "kph": "146.112",
        "lap_set_on": 2024-05-23T15:26:38.000Z,
        "laps": "11",
        "name": "A. Cordeel",
        "number": 16,
        "position": "9",
        "team": "Hitech Pulse-Eight",
        "time": "1:22.219",
      },
      {
        "code": "DUR",
        "gap": "1.104",
        "int": "0.168",
        "kph": "145.814",
        "lap_set_on": 2024-05-23T15:23:13.000Z,
        "laps": "11",
        "name": "J. Dürksen",
        "number": 24,
        "position": "10",
        "team": "AIX Racing",
        "time": "1:22.387",
      },
    ],
  },
  {
    "qualiType": "QUALIFYING GROUP B",
    "results": [
      {
        "code": "VMA",
        "gap": "-",
        "int": "-",
        "kph": "147.745",
        "lap_set_on": 2024-05-23T15:55:39.000Z,
        "laps": "12",
        "name": "V. Martins",
        "number": 1,
        "position": "1",
        "team": "ART Grand Prix",
        "time": "1:21.310",
      },
      {
        "code": "ARO",
        "gap": "0.037",
        "int": "0.037",
        "kph": "147.678",
        "lap_set_on": 2024-05-23T15:56:10.000Z,
        "laps": "12",
        "name": "P. Aron",
        "number": 17,
        "position": "2",
        "team": "Hitech Pulse-Eight",
        "time": "1:21.347",
      },
      {
        "code": "STA",
        "gap": "0.156",
        "int": "0.119",
        "kph": "147.462",
        "lap_set_on": 2024-05-23T15:51:29.000Z,
        "laps": "10",
        "name": "R. Stanek",
        "number": 23,
        "position": "3",
        "team": "Trident",
        "time": "1:21.466",
      },
      {
        "code": "HAU",
        "gap": "0.349",
        "int": "0.193",
        "kph": "147.114",
        "lap_set_on": 2024-05-23T15:53:16.000Z,
        "laps": "11",
        "name": "D. Hauger",
        "number": 11,
        "position": "4",
        "team": "MP Motorsport",
        "time": "1:21.659",
      },
      {
        "code": "BAR",
        "gap": "0.521",
        "int": "0.172",
        "kph": "146.805",
        "lap_set_on": 2024-05-23T15:54:24.000Z,
        "laps": "12",
        "name": "T. Barnard",
        "number": 25,
        "position": "5",
        "team": "AIX Racing",
        "time": "1:21.831",
      },
      {
        "code": "BEA",
        "gap": "0.609",
        "int": "0.088",
        "kph": "146.647",
        "lap_set_on": 2024-05-23T15:52:12.000Z,
        "laps": "10",
        "name": "O. Bearman",
        "number": 3,
        "position": "6",
        "team": "PREMA Racing",
        "time": "1:21.919",
      },
      {
        "code": "MAL",
        "gap": "0.631",
        "int": "0.022",
        "kph": "146.607",
        "lap_set_on": 2024-05-23T15:50:23.000Z,
        "laps": "9",
        "name": "Z. Maloney",
        "number": 5,
        "position": "7",
        "team": "Rodin Motorsport",
        "time": "1:21.941",
      },
      {
        "code": "MAI",
        "gap": "0.678",
        "int": "0.047",
        "kph": "146.523",
        "lap_set_on": 2024-05-23T15:53:20.000Z,
        "laps": "11",
        "name": "K. Maini",
        "number": 9,
        "position": "8",
        "team": "Invicta Racing",
        "time": "1:21.988",
      },
      {
        "code": "CRA",
        "gap": "0.720",
        "int": "0.042",
        "kph": "146.448",
        "lap_set_on": 2024-05-23T15:53:25.000Z,
        "laps": "11",
        "name": "J. Crawford",
        "number": 7,
        "position": "9",
        "team": "DAMS Lucas Oil",
        "time": "1:22.030",
      },
      {
        "code": "JMA",
        "gap": "0.916",
        "int": "0.196",
        "kph": "146.099",
        "lap_set_on": 2024-05-23T15:54:04.000Z,
        "laps": "10",
        "name": "J. Martí",
        "number": 21,
        "position": "10",
        "team": "Campos Racing",
        "time": "1:22.226",
      },
    ],
  },
]
`;

exports[`Testing getQualiResults function Should return quali results with requsted string name of race 1`] = `
[
  {
    "qualiType": "QUALIFYING SESSION",
    "results": [
      {
        "code": "BOR",
        "gap": "0.219",
        "int": "0.219",
        "kph": "191.171",
        "lap_set_on": 2024-02-29T17:21:33.000Z,
        "laps": "10",
        "name": "G. Bortoleto",
        "number": 10,
        "position": "1",
        "team": "Invicta Racing",
        "time": "1:41.915",
      },
      {
        "code": "HAD",
        "gap": "0.242",
        "int": "0.023",
        "kph": "191.127",
        "lap_set_on": 2024-02-29T17:21:28.000Z,
        "laps": "8",
        "name": "I. Hadjar",
        "number": 20,
        "position": "2",
        "team": "Campos Racing",
        "time": "1:41.938",
      },
      {
        "code": "MAL",
        "gap": "0.286",
        "int": "0.044",
        "kph": "191.045",
        "lap_set_on": 2024-02-29T17:20:38.000Z,
        "laps": "12",
        "name": "Z. Maloney",
        "number": 5,
        "position": "3",
        "team": "Rodin Motorsport",
        "time": "1:41.982",
      },
      {
        "code": "HAU",
        "gap": "0.294",
        "int": "0.008",
        "kph": "191.030",
        "lap_set_on": 2024-02-29T17:20:40.000Z,
        "laps": "12",
        "name": "D. Hauger",
        "number": 11,
        "position": "4",
        "team": "MP Motorsport",
        "time": "1:41.990",
      },
      {
        "code": "MIY",
        "gap": "0.307",
        "int": "0.013",
        "kph": "191.006",
        "lap_set_on": 2024-02-29T17:20:43.000Z,
        "laps": "12",
        "name": "R. Miyata",
        "number": 6,
        "position": "5",
        "team": "Rodin Motorsport",
        "time": "1:42.003",
      },
      {
        "code": "OSU",
        "gap": "0.318",
        "int": "0.011",
        "kph": "190.985",
        "lap_set_on": 2024-02-29T17:21:19.000Z,
        "laps": "11",
        "name": "Z. O'Sullivan",
        "number": 2,
        "position": "6",
        "team": "ART Grand Prix",
        "time": "1:42.014",
      },
      {
        "code": "FIT",
        "gap": "0.374",
        "int": "0.056",
        "kph": "190.880",
        "lap_set_on": 2024-02-29T17:20:33.000Z,
        "laps": "12",
        "name": "E. Fittipaldi",
        "number": 14,
        "position": "7",
        "team": "Van Amersfoort Racing",
        "time": "1:42.070",
      },
      {
        "code": "VMA",
        "gap": "0.462",
        "int": "0.088",
        "kph": "190.716",
        "lap_set_on": 2024-02-29T17:21:14.000Z,
        "laps": "11",
        "name": "V. Martins",
        "number": 1,
        "position": "8",
        "team": "ART Grand Prix",
        "time": "1:42.158",
      },
      {
        "code": "BAR",
        "gap": "0.511",
        "int": "0.049",
        "kph": "190.624",
        "lap_set_on": 2024-02-29T17:25:24.000Z,
        "laps": "11",
        "name": "T. Barnard",
        "number": 25,
        "position": "9",
        "team": "AIX Racing",
        "time": "1:42.207",
      },
      {
        "code": "CRA",
        "gap": "0.591",
        "int": "0.080",
        "kph": "190.475",
        "lap_set_on": 2024-02-29T17:20:58.000Z,
        "laps": "11",
        "name": "J. Crawford",
        "number": 7,
        "position": "10",
        "team": "DAMS Lucas Oil",
        "time": "1:42.287",
      },
      {
        "code": "JMA",
        "gap": "0.637",
        "int": "0.046",
        "kph": "190.390",
        "lap_set_on": 2024-02-29T17:21:56.000Z,
        "laps": "8",
        "name": "J. Martí",
        "number": 21,
        "position": "11",
        "team": "Campos Racing",
        "time": "1:42.333",
      },
      {
        "code": "ARO",
        "gap": "0.644",
        "int": "0.007",
        "kph": "190.377",
        "lap_set_on": 2024-02-29T17:21:51.000Z,
        "laps": "11",
        "name": "P. Aron",
        "number": 17,
        "position": "12",
        "team": "Hitech Pulse-Eight",
        "time": "1:42.340",
      },
      {
        "code": "JCO",
        "gap": "0.673",
        "int": "0.029",
        "kph": "190.323",
        "lap_set_on": 2024-02-29T17:24:46.000Z,
        "laps": "12",
        "name": "J. Correa",
        "number": 8,
        "position": "13",
        "team": "DAMS Lucas Oil",
        "time": "1:42.369",
      },
      {
        "code": "VIL",
        "gap": "0.696",
        "int": "0.023",
        "kph": "190.280",
        "lap_set_on": 2024-02-29T17:24:43.000Z,
        "laps": "12",
        "name": "R. Villagómez",
        "number": 15,
        "position": "14",
        "team": "Van Amersfoort Racing",
        "time": "1:42.392",
      },
      {
        "code": "COL",
        "gap": "0.696",
        "int": "0.000",
        "kph": "190.280",
        "lap_set_on": 2024-02-29T17:24:51.000Z,
        "laps": "12",
        "name": "F. Colapinto",
        "number": 12,
        "position": "15",
        "team": "MP Motorsport",
        "time": "1:42.392",
      },
      {
        "code": "VER",
        "gap": "0.948",
        "int": "0.252",
        "kph": "189.813",
        "lap_set_on": 2024-02-29T17:21:59.000Z,
        "laps": "10",
        "name": "R. Verschoor",
        "number": 22,
        "position": "16",
        "team": "Trident",
        "time": "1:42.644",
      },
      {
        "code": "ANT",
        "gap": "0.997",
        "int": "0.049",
        "kph": "189.722",
        "lap_set_on": 2024-02-29T17:21:04.000Z,
        "laps": "11",
        "name": "A. Antonelli",
        "number": 4,
        "position": "17",
        "team": "PREMA Racing",
        "time": "1:42.693",
      },
      {
        "code": "BEA",
        "gap": "1.014",
        "int": "0.017",
        "kph": "189.691",
        "lap_set_on": 2024-02-29T17:21:10.000Z,
        "laps": "11",
        "name": "O. Bearman",
        "number": 3,
        "position": "18",
        "team": "PREMA Racing",
        "time": "1:42.710",
      },
      {
        "code": "ACO",
        "gap": "1.249",
        "int": "0.235",
        "kph": "189.258",
        "lap_set_on": 2024-02-29T17:26:08.000Z,
        "laps": "11",
        "name": "A. Cordeel",
        "number": 16,
        "position": "19",
        "team": "Hitech Pulse-Eight",
        "time": "1:42.945",
      },
      {
        "code": "STA",
        "gap": "1.372",
        "int": "0.123",
        "kph": "189.032",
        "lap_set_on": 2024-02-29T17:24:57.000Z,
        "laps": "10",
        "name": "R. Stanek",
        "number": 23,
        "position": "20",
        "team": "Trident",
        "time": "1:43.068",
      },
      {
        "code": "DUR",
        "gap": "1.457",
        "int": "0.085",
        "kph": "188.876",
        "lap_set_on": 2024-02-29T17:21:48.000Z,
        "laps": "11",
        "name": "J. Dürksen",
        "number": 24,
        "position": "21",
        "team": "AIX Racing",
        "time": "1:43.153",
      },
    ],
  },
]
`;
